# bug-free-daq

./: listen_and_plot.py  listen_and_plot.py~
qtpd_daq-v1.2/: Makefile  Makefile.am  Makefile.in  README  config.status  config_bobschool.txt  config_bobschool.txt~  configure  configure.ac
qtpd_daq-v1.2/config/: config.txt
qtpd_daq-v1.2/src/: Console.c  Console.h  Makefile  Makefile.am  Makefile.in  QTPD_DAQ  QTPD_DAQ.c  QTPD_DAQ.c~  QTPD_DAQ_BobSchool.c~  QTPD_DAQ_back.c  QTPD_DAQ_back.c~  RawData.txt  data.txt  reset.sh
qtpd_daq-v1.2/src/.deps/: Console.Po  QTPD_DAQ.Po
